adding small me section in documentation

--- a/index.html
+++ b/index.html
@@ -154,6 +154,11 @@
             </tbody>
           </table>
         </section>
+
+        <section>
+          <h1>Me</h1>
+          <a href='http://davidandsuzi.com'>http://davidandsuzi.com</a>
+        </section>
     </div>
 
     <script src="//code.angularjs.org/1.0.8/angular.min.js"></script>
