--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
           font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
           color: #333;
       }
-      .container > section {
+      #pageContainer > section {
         margin-bottom: 25px;
         padding-bottom: 25px;
         border-bottom: 1px solid #CCC;
       }
-      .container > section:last-child {
+      #pageContainer > section:last-child {
         border-bottom: 0px solid #CCC;
       }
     </style>
@@ -43,7 +43,7 @@
       <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-    <div ng-controller='ExampleCtrl'>
+    <div id='pageContainer' ng-controller='ExampleCtrl'>
 
         <section>
           <h1>Angular Facebook Utils</h1>
@@ -150,6 +150,38 @@
               <tr>
                 <td>channel-file</td>
                 <td>The filepath to your channel file (defaults to 'channel.html')</td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
+
+        <section>
+          <h1>Events</h1>
+          <div>Changes in log in status are broadcasted on the root scope along with corresponding data; so you'll just want to set up <code>$scope.$on('event name, like fbLoginSuccess')</code> listeners in your various controllers.
+          <table class='table table-striped'>
+            <thead>
+              <tr><th>Event Name</th><th>Description</th></tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>fbStatusChange</td>
+                <td>Change in status</td>
+              </tr>
+              <tr>
+                <td>fbLoginSuccess</td>
+                <td>Successfully logged in (will contain a userNotAuthorized property if the user did not authorize permissions</td>
+              </tr>
+              <tr>
+                <td>fbLoginFailure</td>
+                <td>Tried to log in, but an error occurred</td>
+              </tr>
+              <tr>
+                <td>fbLogoutSuccess</td>
+                <td>Successfully logged out</td>
+              </tr>
+              <tr>
+                <td>fbLogoutFailure</td>
+                <td>Tried to log out, but an error occurred</td>
               </tr>
             </tbody>
           </table>
