non firebase version verified

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <script src="//cdn.firebase.com/v0/firebase.js"></script>
     <script src="//cdn.firebase.com/libs/angularfire/0.3.0/angularfire.min.js"></script>
 
-    <script src="src/facebookUtilsFirebase.js"></script>
+    <script src="src/facebookUtilsFirebase.min.js"></script>
 
     <!-- DEMO -->
     <script src="demo/demoApp.js"></script>
