everything should be working now - only docs left

--- a/index.html
+++ b/index.html
@@ -91,15 +91,9 @@
 
     <div id='pageContainer' ng-view></div>
 
-    <script src="src/bower_components/angular/angular.js"></script>
-    <script src="src/bower_components/angular-route/angular-route.js"></script>
-    <!-- <script src="src/facebookUtils.js"></script> -->
-
-    <script src='src/scripts/app.js'></script>
-    <script src='src/views/facebookLoginPartial.js'></script>
-    <script src='src/scripts/facebookSDK.js'></script>
-    <script src='src/scripts/facebookUser.js'></script>
-    <script src='src/scripts/facebookLoginButton.js'></script>
+    <script src="src/bower_components/angular/angular.min.js"></script>
+    <script src="src/bower_components/angular-route/angular-route.min.js"></script>
+    <script src="src/facebookUtils.min.js"></script>
 
     <!-- DEMO -->
     <script src="demo/demoApp.js"></script>
