updating docs slowly, need to do the old ones

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       }
       ul li {
         display: inline-block;
-        padding-right: 10px;
+        padding-right: 20px;
       }
       #pageContainer {
         margin-top: 90px;
@@ -70,9 +70,9 @@
       <section>
         <ul>
           <li><a href='#/'>Home</a></li>
-          <li><a href='#/private'>Private</a></li>
+          <li><a href='#/private'>Private JSON Dump</a></li>
           <li><a target="_blank" href='https://github.com/davidchang/angular-facebook-utils'>Github Repo</a></li>
-          <li><a target="_blank" href="http://davidandsuzi.com">Me</a></li>
+          <li><a target="_blank" href="http://davidandsuzi.com">Old Docs</a></li>
         </ul>
       </section>
 
