--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       .margin-left {
         margin-left: 10px;
       }
+      .margin-top {
+        margin-top: 10px;
+      }
       header {
         position: fixed;
         top: 0px;
@@ -51,7 +54,7 @@
         padding-right: 20px;
       }
       #pageContainer {
-        margin-top: 90px;
+        margin-top: 100px;
       }
     </style>
 </head>
@@ -71,8 +74,7 @@
         <ul>
           <li><a href='#/'>Home</a></li>
           <li><a href='#/private'>Private JSON Dump</a></li>
-          <li><a target="_blank" href='https://github.com/davidchang/angular-facebook-utils'>Github Repo</a></li>
-          <li><a target="_blank" href="http://davidandsuzi.com">Old Docs</a></li>
+          <li><a target="_blank" href='https://github.com/davidchang/angular-facebook-utils'>Code on Github</a></li>
         </ul>
       </section>
 
