--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 
     <div id='pageContainer' ng-view></div>
 
-    <script src="src/bower_components/angular/angular.min.js"></script>
-    <script src="src/bower_components/angular-route/angular-route.min.js"></script>
+    <script src="//code.angularjs.org/1.2.9/angular.min.js"></script>
+    <script src="//code.angularjs.org/1.2.9/angular-route.min.js"></script>
     <script src="src/facebookUtils.min.js"></script>
 
     <!-- DEMO -->
